# final-project-repo-group-four

./: README.md  pyproject.toml
EDA/: eda1.ipynb
notebooks/: 1990s_topic.ipynb  2010s_topic.ipynb  bert00s.ipynb  bert60s.ipynb  bert80s.ipynb  cleaning.ipynb  descriptive_statistics.ipynb  general_topics.ipynb  general_topics_trend.ipynb  sentiment_1960s.ipynb  sentiment_all_decades.ipynb  vocalization_counts.ipynb
scripts/: hello_Amy.py  hello_jazmine.py
src/lyrics_analyzer/: mymodule.py  test_func.py
